--- a/main.css
+++ b/main.css
@@ -11,17 +11,39 @@ html, body {
 }
 
 .input, button {
-    padding: .5em .5em;
+    padding: .5em;
 }
 
 .input {
     display: inline-block;
-    min-width: 15ch;
+    width: 15ch;
+    overflow-wrap: anywhere;
+}
+
+.input-group {
+    display:grid;
+    grid-auto-flow: column;
+}
+
+ol {
+    counter-reset: cntli;
+    display: flex;
+    flex-flow: row wrap;
+    background-color: green;
 }
 
 li {
     display: grid;
     grid-auto-flow: row;
+    width: fit-content;
+    background-color: blue;
+    border: 1px solid yellow;
+}
+
+li:before {
+    counter-increment: cntli;
+    content: "#" counter(cntli);
+    display: block;
 }
 
 [contenteditable=true]:empty:before {
