add scrolling to top button

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
-        <link rel="stylesheet" type="text/css" href="css/main.css?v=5"/>
+        <link rel="stylesheet" type="text/css" href="css/main.css?v=7"/>
         <title>千字文</title>
     </head>
     <body>
@@ -19,6 +19,9 @@
 
 {{cards}}
         </ol>
-        <script src="js/main.js?v=5" async></script>
+        <div class="btn-top" data-action="top">
+            <span data-action="top">↑</span>
+        </div>
+        <script src="js/main.js?v=6" async></script>
     </body>
 </html>
