--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,8 @@
 /*dark colour scheme*/
 
 :root {
-    --color-bg: rgba(0, 0, 0, .5);
+    --color-bg: black;
+    --color-bg-alpha: rgba(0, 0, 0, .7);
     --color-border: gray;
     --color-hover: cornflowerblue;
     --color-invalid: coral;
@@ -22,7 +23,8 @@ button:hover {
 
 @media (prefers-color-scheme: light) {
     :root {
-        --color-bg: rgba(255, 255, 255, .5);
+        --color-bg: white;
+        --color-bg-alpha: rgba(255, 255, 255, .7);
         --color-border: gray;
         --color-hover: teal;
         --color-invalid: palevioletred;
@@ -46,6 +48,7 @@ html, body {
     font-size: 16px;
     color: var(--color-text);
     font-family: serif;
+    scroll-behavior: smooth;
 }
 
 .valid {
@@ -62,7 +65,7 @@ html, body {
 
 button {
     width: fit-content;
-    background: var(--color-bg);
+    background: var(--color-bg-alpha);
     color: var(--color-text);
     border: 1px solid var(--color-border);
     user-select: none;
@@ -84,6 +87,19 @@ button {
         flex-flow: column nowrap;
         padding: 0;
     }
+
+    li {
+        margin-bottom: .5em;
+    }
+
+    .btn-top {
+        bottom: 0;
+        width: 100%;
+    }
+
+    body {
+        padding-bottom: 3em;
+    }
 }
 
 @media screen and (min-width: 721px) {
@@ -103,6 +119,13 @@ button {
 
     li > .input-group {
         flex: 1;
+    }
+
+    .btn-top {
+        bottom: 1em;
+        right: 1em;
+        width: 2em;
+        border-radius: 2em;
     }
 }
 
@@ -126,7 +149,7 @@ li {
     flex-flow: column nowrap;
     border: 1px solid var(--color-border);
     padding: 1em;
-    background: var(--color-bg);
+    background: var(--color-bg-alpha);
 }
 
 li:before {
@@ -148,4 +171,17 @@ li:before {
 .center {
     width: 100%;
     text-align: center;
+}
+
+.btn-top {
+    position: fixed;
+    height: 2em;
+    font-size: 2em;
+    border: 1px solid var(--color-border);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    background: var(--color-bg);
+    user-select: none;
 }
